new names for wrapper and minor refactoring in calling

--- a/wrapper-example.ipynb
+++ b/wrapper-example.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from api_wrapper import get_df_from_query"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -36,14 +25,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 76.54it/s]\n"
+      "100%|██████████| 1000/1000 [00:13<00:00, 74.28it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?offset=0&limit=1&q=bateria&category=MLB61076\n"
+      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?limit=1&offset=0&q=bateria&category=MLB61076\n"
      ]
     },
     {
@@ -100,8 +89,8 @@
        "      <td>158</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6797954...</td>\n",
        "      <td>http://mlb-s2-p.mlstatic.com/326321-MLB2075691...</td>\n",
-       "      <td>{'state': {'name': 'São Paulo', 'id': 'BR-SP'}...</td>\n",
-       "      <td>{'tags': [], 'real_estate_agency': False, 'pow...</td>\n",
+       "      <td>{'longitude': -46.8958261, 'country': {'id': '...</td>\n",
+       "      <td>{'real_estate_agency': False, 'id': 79901866, ...</td>\n",
        "      <td>2035-07-12 22:57:38</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>18017.88</td>\n",
@@ -119,8 +108,8 @@
        "      <td>4</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801080...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/12684-MLB20063035...</td>\n",
-       "      <td>{'state': {'name': 'Minas Gerais', 'id': 'BR-M...</td>\n",
-       "      <td>{'tags': [], 'real_estate_agency': False, 'pow...</td>\n",
+       "      <td>{'longitude': -43.9698603, 'country': {'id': '...</td>\n",
+       "      <td>{'real_estate_agency': False, 'id': 96542271, ...</td>\n",
        "      <td>2036-02-17 20:55:17</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1923.90</td>\n",
@@ -138,8 +127,8 @@
        "      <td>488</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801146...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/14593-MLB42305861...</td>\n",
-       "      <td>{'state': {'name': 'Minas Gerais', 'id': 'BR-M...</td>\n",
-       "      <td>{'tags': [], 'real_estate_agency': False, 'pow...</td>\n",
+       "      <td>{'longitude': -43.9698603, 'country': {'id': '...</td>\n",
+       "      <td>{'real_estate_agency': False, 'id': 96542271, ...</td>\n",
        "      <td>2036-05-29 11:37:22</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>888.03</td>\n",
@@ -157,8 +146,8 @@
        "      <td>98</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802804...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/308501-MLB2035015...</td>\n",
-       "      <td>{'state': {'name': 'Paraná', 'id': 'BR-PR'}, '...</td>\n",
-       "      <td>{'tags': [], 'real_estate_agency': False, 'pow...</td>\n",
+       "      <td>{'longitude': -49.2598808, 'country': {'id': '...</td>\n",
+       "      <td>{'real_estate_agency': False, 'id': 74620867, ...</td>\n",
        "      <td>2035-07-14 16:48:56</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>91.98</td>\n",
@@ -176,8 +165,8 @@
        "      <td>99926</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802830...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/20835-MLB20198366...</td>\n",
-       "      <td>{'state': {'name': 'Paraná', 'id': 'BR-PR'}, '...</td>\n",
-       "      <td>{'tags': [], 'real_estate_agency': False, 'pow...</td>\n",
+       "      <td>{'longitude': -54.304775, 'country': {'id': 'B...</td>\n",
+       "      <td>{'real_estate_agency': False, 'id': 120931770,...</td>\n",
        "      <td>2036-02-11 01:44:24</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1472.60</td>\n",
@@ -226,19 +215,19 @@
        "\n",
        "                                                 seller_address  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'state': {'name': 'São Paulo', 'id': 'BR-SP'}...   \n",
-       "MLB680108022  {'state': {'name': 'Minas Gerais', 'id': 'BR-M...   \n",
-       "MLB680114615  {'state': {'name': 'Minas Gerais', 'id': 'BR-M...   \n",
-       "MLB680280421  {'state': {'name': 'Paraná', 'id': 'BR-PR'}, '...   \n",
-       "MLB680283060  {'state': {'name': 'Paraná', 'id': 'BR-PR'}, '...   \n",
+       "MLB679795497  {'longitude': -46.8958261, 'country': {'id': '...   \n",
+       "MLB680108022  {'longitude': -43.9698603, 'country': {'id': '...   \n",
+       "MLB680114615  {'longitude': -43.9698603, 'country': {'id': '...   \n",
+       "MLB680280421  {'longitude': -49.2598808, 'country': {'id': '...   \n",
+       "MLB680283060  {'longitude': -54.304775, 'country': {'id': 'B...   \n",
        "\n",
        "                                                         seller  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'tags': [], 'real_estate_agency': False, 'pow...   \n",
-       "MLB680108022  {'tags': [], 'real_estate_agency': False, 'pow...   \n",
-       "MLB680114615  {'tags': [], 'real_estate_agency': False, 'pow...   \n",
-       "MLB680280421  {'tags': [], 'real_estate_agency': False, 'pow...   \n",
-       "MLB680283060  {'tags': [], 'real_estate_agency': False, 'pow...   \n",
+       "MLB679795497  {'real_estate_agency': False, 'id': 79901866, ...   \n",
+       "MLB680108022  {'real_estate_agency': False, 'id': 96542271, ...   \n",
+       "MLB680114615  {'real_estate_agency': False, 'id': 96542271, ...   \n",
+       "MLB680280421  {'real_estate_agency': False, 'id': 74620867, ...   \n",
+       "MLB680283060  {'real_estate_agency': False, 'id': 120931770,...   \n",
        "\n",
        "                       stop_time category_id   revenue          start_time  \\\n",
        "id                                                                           \n",
@@ -257,13 +246,15 @@
        "MLB680283060       277    Itaipulândia        Paraná  120931770  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = get_df_from_query(query='bateria', category='MLB61076', items_per_query=100, total_results_limit=1000)\n",
+    "import ml_wrapper as ml\n",
+    "\n",
+    "df = ml.get_df_from_query(query='bateria', category='MLB61076', items_per_query=100, total_results_limit=1000)\n",
     "df.head()"
    ]
   },
