renaming and folder structure

--- a/wrapper-example.ipynb
+++ b/wrapper-example.ipynb
@@ -25,14 +25,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 74.28it/s]\n"
+      "100%|██████████| 1000/1000 [00:13<00:00, 77.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?limit=1&offset=0&q=bateria&category=MLB61076\n"
+      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?q=bateria&category=MLB61076&offset=0&limit=1\n"
      ]
     },
     {
@@ -89,8 +89,8 @@
        "      <td>158</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6797954...</td>\n",
        "      <td>http://mlb-s2-p.mlstatic.com/326321-MLB2075691...</td>\n",
-       "      <td>{'longitude': -46.8958261, 'country': {'id': '...</td>\n",
-       "      <td>{'real_estate_agency': False, 'id': 79901866, ...</td>\n",
+       "      <td>{'comment': '', 'city': {'id': 'BR-SP-14', 'na...</td>\n",
+       "      <td>{'tags': [], 'id': 79901866, 'power_seller_sta...</td>\n",
        "      <td>2035-07-12 22:57:38</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>18017.88</td>\n",
@@ -108,8 +108,8 @@
        "      <td>4</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801080...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/12684-MLB20063035...</td>\n",
-       "      <td>{'longitude': -43.9698603, 'country': {'id': '...</td>\n",
-       "      <td>{'real_estate_agency': False, 'id': 96542271, ...</td>\n",
+       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...</td>\n",
+       "      <td>{'tags': [], 'id': 96542271, 'power_seller_sta...</td>\n",
        "      <td>2036-02-17 20:55:17</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1923.90</td>\n",
@@ -127,13 +127,13 @@
        "      <td>488</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801146...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/14593-MLB42305861...</td>\n",
-       "      <td>{'longitude': -43.9698603, 'country': {'id': '...</td>\n",
-       "      <td>{'real_estate_agency': False, 'id': 96542271, ...</td>\n",
+       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...</td>\n",
+       "      <td>{'tags': [], 'id': 96542271, 'power_seller_sta...</td>\n",
        "      <td>2036-05-29 11:37:22</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>888.03</td>\n",
        "      <td>2016-05-29 11:37:22</td>\n",
-       "      <td>168</td>\n",
+       "      <td>169</td>\n",
        "      <td>Belo Horizonte</td>\n",
        "      <td>Minas Gerais</td>\n",
        "      <td>96542271</td>\n",
@@ -146,8 +146,8 @@
        "      <td>98</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802804...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/308501-MLB2035015...</td>\n",
-       "      <td>{'longitude': -49.2598808, 'country': {'id': '...</td>\n",
-       "      <td>{'real_estate_agency': False, 'id': 74620867, ...</td>\n",
+       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0NVUjYyZm...</td>\n",
+       "      <td>{'tags': [], 'id': 74620867, 'power_seller_sta...</td>\n",
        "      <td>2035-07-14 16:48:56</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>91.98</td>\n",
@@ -165,8 +165,8 @@
        "      <td>99926</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802830...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/20835-MLB20198366...</td>\n",
-       "      <td>{'longitude': -54.304775, 'country': {'id': 'B...</td>\n",
-       "      <td>{'real_estate_agency': False, 'id': 120931770,...</td>\n",
+       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0lUQTE5MT...</td>\n",
+       "      <td>{'tags': [], 'id': 120931770, 'power_seller_st...</td>\n",
        "      <td>2036-02-11 01:44:24</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1472.60</td>\n",
@@ -215,19 +215,19 @@
        "\n",
        "                                                 seller_address  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'longitude': -46.8958261, 'country': {'id': '...   \n",
-       "MLB680108022  {'longitude': -43.9698603, 'country': {'id': '...   \n",
-       "MLB680114615  {'longitude': -43.9698603, 'country': {'id': '...   \n",
-       "MLB680280421  {'longitude': -49.2598808, 'country': {'id': '...   \n",
-       "MLB680283060  {'longitude': -54.304775, 'country': {'id': 'B...   \n",
+       "MLB679795497  {'comment': '', 'city': {'id': 'BR-SP-14', 'na...   \n",
+       "MLB680108022  {'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...   \n",
+       "MLB680114615  {'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...   \n",
+       "MLB680280421  {'comment': '', 'city': {'id': 'TUxCQ0NVUjYyZm...   \n",
+       "MLB680283060  {'comment': '', 'city': {'id': 'TUxCQ0lUQTE5MT...   \n",
        "\n",
        "                                                         seller  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'real_estate_agency': False, 'id': 79901866, ...   \n",
-       "MLB680108022  {'real_estate_agency': False, 'id': 96542271, ...   \n",
-       "MLB680114615  {'real_estate_agency': False, 'id': 96542271, ...   \n",
-       "MLB680280421  {'real_estate_agency': False, 'id': 74620867, ...   \n",
-       "MLB680283060  {'real_estate_agency': False, 'id': 120931770,...   \n",
+       "MLB679795497  {'tags': [], 'id': 79901866, 'power_seller_sta...   \n",
+       "MLB680108022  {'tags': [], 'id': 96542271, 'power_seller_sta...   \n",
+       "MLB680114615  {'tags': [], 'id': 96542271, 'power_seller_sta...   \n",
+       "MLB680280421  {'tags': [], 'id': 74620867, 'power_seller_sta...   \n",
+       "MLB680283060  {'tags': [], 'id': 120931770, 'power_seller_st...   \n",
        "\n",
        "                       stop_time category_id   revenue          start_time  \\\n",
        "id                                                                           \n",
@@ -241,7 +241,7 @@
        "id                                                               \n",
        "MLB679795497       490         Jundiaí     São Paulo   79901866  \n",
        "MLB680108022       270  Belo Horizonte  Minas Gerais   96542271  \n",
-       "MLB680114615       168  Belo Horizonte  Minas Gerais   96542271  \n",
+       "MLB680114615       169  Belo Horizonte  Minas Gerais   96542271  \n",
        "MLB680280421       488        Curitiba        Paraná   74620867  \n",
        "MLB680283060       277    Itaipulândia        Paraná  120931770  "
       ]
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "import ml_wrapper as ml\n",
+    "import mercadolibre as ml\n",
     "\n",
     "df = ml.get_df_from_query(query='bateria', category='MLB61076', items_per_query=100, total_results_limit=1000)\n",
     "df.head()"
