--- a/wrapper-example.ipynb
+++ b/wrapper-example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,14 +25,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 77.30it/s]\n"
+      "100%|██████████| 1000/1000 [00:14<00:00, 66.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?q=bateria&category=MLB61076&offset=0&limit=1\n"
+      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?q=bateria&offset=0&limit=1&category=MLB61076\n"
      ]
     },
     {
@@ -85,17 +85,17 @@
        "      <th>MLB679795497</th>\n",
        "      <td>Bateria Iphone 4s 4gs Original + Tampa Preta +...</td>\n",
        "      <td>84.99</td>\n",
-       "      <td>212</td>\n",
-       "      <td>158</td>\n",
+       "      <td>218</td>\n",
+       "      <td>152</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6797954...</td>\n",
        "      <td>http://mlb-s2-p.mlstatic.com/326321-MLB2075691...</td>\n",
-       "      <td>{'comment': '', 'city': {'id': 'BR-SP-14', 'na...</td>\n",
-       "      <td>{'tags': [], 'id': 79901866, 'power_seller_sta...</td>\n",
+       "      <td>{'id': 145589081, 'country': {'id': 'BR', 'nam...</td>\n",
+       "      <td>{'id': 79901866, 'power_seller_status': 'plati...</td>\n",
        "      <td>2035-07-12 22:57:38</td>\n",
        "      <td>MLB61076</td>\n",
-       "      <td>18017.88</td>\n",
+       "      <td>18527.82</td>\n",
        "      <td>2015-07-12 22:57:38</td>\n",
-       "      <td>490</td>\n",
+       "      <td>496</td>\n",
        "      <td>Jundiaí</td>\n",
        "      <td>São Paulo</td>\n",
        "      <td>79901866</td>\n",
@@ -108,13 +108,13 @@
        "      <td>4</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801080...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/12684-MLB20063035...</td>\n",
-       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...</td>\n",
-       "      <td>{'tags': [], 'id': 96542271, 'power_seller_sta...</td>\n",
+       "      <td>{'id': 111198324, 'country': {'id': 'BR', 'nam...</td>\n",
+       "      <td>{'id': 96542271, 'power_seller_status': None, ...</td>\n",
        "      <td>2036-02-17 20:55:17</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1923.90</td>\n",
        "      <td>2016-02-17 20:55:17</td>\n",
-       "      <td>270</td>\n",
+       "      <td>276</td>\n",
        "      <td>Belo Horizonte</td>\n",
        "      <td>Minas Gerais</td>\n",
        "      <td>96542271</td>\n",
@@ -127,13 +127,13 @@
        "      <td>488</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801146...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/14593-MLB42305861...</td>\n",
-       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...</td>\n",
-       "      <td>{'tags': [], 'id': 96542271, 'power_seller_sta...</td>\n",
+       "      <td>{'id': 111198324, 'country': {'id': 'BR', 'nam...</td>\n",
+       "      <td>{'id': 96542271, 'power_seller_status': None, ...</td>\n",
        "      <td>2036-05-29 11:37:22</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>888.03</td>\n",
        "      <td>2016-05-29 11:37:22</td>\n",
-       "      <td>169</td>\n",
+       "      <td>175</td>\n",
        "      <td>Belo Horizonte</td>\n",
        "      <td>Minas Gerais</td>\n",
        "      <td>96542271</td>\n",
@@ -146,13 +146,13 @@
        "      <td>98</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802804...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/308501-MLB2035015...</td>\n",
-       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0NVUjYyZm...</td>\n",
-       "      <td>{'tags': [], 'id': 74620867, 'power_seller_sta...</td>\n",
+       "      <td>{'id': 68824781, 'country': {'id': 'BR', 'name...</td>\n",
+       "      <td>{'id': 74620867, 'power_seller_status': 'gold'...</td>\n",
        "      <td>2035-07-14 16:48:56</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>91.98</td>\n",
        "      <td>2015-07-14 16:48:56</td>\n",
-       "      <td>488</td>\n",
+       "      <td>495</td>\n",
        "      <td>Curitiba</td>\n",
        "      <td>Paraná</td>\n",
        "      <td>74620867</td>\n",
@@ -161,17 +161,17 @@
        "      <th>MLB680283060</th>\n",
        "      <td>Bateria Original Iphone 5 5g 5s 5c - Apple Pro...</td>\n",
        "      <td>19.90</td>\n",
-       "      <td>74</td>\n",
-       "      <td>99926</td>\n",
+       "      <td>76</td>\n",
+       "      <td>99924</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802830...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/20835-MLB20198366...</td>\n",
-       "      <td>{'comment': '', 'city': {'id': 'TUxCQ0lUQTE5MT...</td>\n",
-       "      <td>{'tags': [], 'id': 120931770, 'power_seller_st...</td>\n",
+       "      <td>{'id': 131386796, 'country': {'id': 'BR', 'nam...</td>\n",
+       "      <td>{'id': 120931770, 'power_seller_status': 'silv...</td>\n",
        "      <td>2036-02-11 01:44:24</td>\n",
        "      <td>MLB61076</td>\n",
-       "      <td>1472.60</td>\n",
+       "      <td>1512.40</td>\n",
        "      <td>2016-02-11 01:44:24</td>\n",
-       "      <td>277</td>\n",
+       "      <td>283</td>\n",
        "      <td>Itaipulândia</td>\n",
        "      <td>Paraná</td>\n",
        "      <td>120931770</td>\n",
@@ -191,11 +191,11 @@
        "\n",
        "              sold_quantity  available_quantity  \\\n",
        "id                                                \n",
-       "MLB679795497            212                 158   \n",
+       "MLB679795497            218                 152   \n",
        "MLB680108022             55                   4   \n",
        "MLB680114615             27                 488   \n",
        "MLB680280421              2                  98   \n",
-       "MLB680283060             74               99926   \n",
+       "MLB680283060             76               99924   \n",
        "\n",
        "                                                      permalink  \\\n",
        "id                                                                \n",
@@ -215,38 +215,38 @@
        "\n",
        "                                                 seller_address  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'comment': '', 'city': {'id': 'BR-SP-14', 'na...   \n",
-       "MLB680108022  {'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...   \n",
-       "MLB680114615  {'comment': '', 'city': {'id': 'TUxCQ0JFTGU0OD...   \n",
-       "MLB680280421  {'comment': '', 'city': {'id': 'TUxCQ0NVUjYyZm...   \n",
-       "MLB680283060  {'comment': '', 'city': {'id': 'TUxCQ0lUQTE5MT...   \n",
+       "MLB679795497  {'id': 145589081, 'country': {'id': 'BR', 'nam...   \n",
+       "MLB680108022  {'id': 111198324, 'country': {'id': 'BR', 'nam...   \n",
+       "MLB680114615  {'id': 111198324, 'country': {'id': 'BR', 'nam...   \n",
+       "MLB680280421  {'id': 68824781, 'country': {'id': 'BR', 'name...   \n",
+       "MLB680283060  {'id': 131386796, 'country': {'id': 'BR', 'nam...   \n",
        "\n",
        "                                                         seller  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'tags': [], 'id': 79901866, 'power_seller_sta...   \n",
-       "MLB680108022  {'tags': [], 'id': 96542271, 'power_seller_sta...   \n",
-       "MLB680114615  {'tags': [], 'id': 96542271, 'power_seller_sta...   \n",
-       "MLB680280421  {'tags': [], 'id': 74620867, 'power_seller_sta...   \n",
-       "MLB680283060  {'tags': [], 'id': 120931770, 'power_seller_st...   \n",
+       "MLB679795497  {'id': 79901866, 'power_seller_status': 'plati...   \n",
+       "MLB680108022  {'id': 96542271, 'power_seller_status': None, ...   \n",
+       "MLB680114615  {'id': 96542271, 'power_seller_status': None, ...   \n",
+       "MLB680280421  {'id': 74620867, 'power_seller_status': 'gold'...   \n",
+       "MLB680283060  {'id': 120931770, 'power_seller_status': 'silv...   \n",
        "\n",
        "                       stop_time category_id   revenue          start_time  \\\n",
        "id                                                                           \n",
-       "MLB679795497 2035-07-12 22:57:38    MLB61076  18017.88 2015-07-12 22:57:38   \n",
+       "MLB679795497 2035-07-12 22:57:38    MLB61076  18527.82 2015-07-12 22:57:38   \n",
        "MLB680108022 2036-02-17 20:55:17    MLB61076   1923.90 2016-02-17 20:55:17   \n",
        "MLB680114615 2036-05-29 11:37:22    MLB61076    888.03 2016-05-29 11:37:22   \n",
        "MLB680280421 2035-07-14 16:48:56    MLB61076     91.98 2015-07-14 16:48:56   \n",
-       "MLB680283060 2036-02-11 01:44:24    MLB61076   1472.60 2016-02-11 01:44:24   \n",
+       "MLB680283060 2036-02-11 01:44:24    MLB61076   1512.40 2016-02-11 01:44:24   \n",
        "\n",
        "              days_ago            city         state  seller_id  \n",
        "id                                                               \n",
-       "MLB679795497       490         Jundiaí     São Paulo   79901866  \n",
-       "MLB680108022       270  Belo Horizonte  Minas Gerais   96542271  \n",
-       "MLB680114615       169  Belo Horizonte  Minas Gerais   96542271  \n",
-       "MLB680280421       488        Curitiba        Paraná   74620867  \n",
-       "MLB680283060       277    Itaipulândia        Paraná  120931770  "
+       "MLB679795497       496         Jundiaí     São Paulo   79901866  \n",
+       "MLB680108022       276  Belo Horizonte  Minas Gerais   96542271  \n",
+       "MLB680114615       175  Belo Horizonte  Minas Gerais   96542271  \n",
+       "MLB680280421       495        Curitiba        Paraná   74620867  \n",
+       "MLB680283060       283    Itaipulândia        Paraná  120931770  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
