--- a/wrapper-example.ipynb
+++ b/wrapper-example.ipynb
@@ -1,10 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import mercadolibre as ml"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Request from query (search by keywords and/or category)"
+    "## Search by query and category"
    ]
   },
   {
@@ -18,21 +29,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching for \"bateria\" in iPhone...\n"
+      "Searching for \"bateria\" in iPhone sold by N/A...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 66.01it/s]\n"
+      "\r",
+      "  0%|          | 0/1000 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?q=bateria&offset=0&limit=1&category=MLB61076\n"
+      "7697 results found.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:13<00:00, 69.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?q=bateria&category=MLB61076&limit=1&offset=0\n"
      ]
     },
     {
@@ -89,8 +115,8 @@
        "      <td>152</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6797954...</td>\n",
        "      <td>http://mlb-s2-p.mlstatic.com/326321-MLB2075691...</td>\n",
-       "      <td>{'id': 145589081, 'country': {'id': 'BR', 'nam...</td>\n",
-       "      <td>{'id': 79901866, 'power_seller_status': 'plati...</td>\n",
+       "      <td>{'city': {'name': 'Jundiaí', 'id': 'BR-SP-14'}...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'platinum'...</td>\n",
        "      <td>2035-07-12 22:57:38</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>18527.82</td>\n",
@@ -108,13 +134,13 @@
        "      <td>4</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801080...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/12684-MLB20063035...</td>\n",
-       "      <td>{'id': 111198324, 'country': {'id': 'BR', 'nam...</td>\n",
-       "      <td>{'id': 96542271, 'power_seller_status': None, ...</td>\n",
+       "      <td>{'city': {'name': 'Belo Horizonte', 'id': 'TUx...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': None, 'rea...</td>\n",
        "      <td>2036-02-17 20:55:17</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1923.90</td>\n",
        "      <td>2016-02-17 20:55:17</td>\n",
-       "      <td>276</td>\n",
+       "      <td>277</td>\n",
        "      <td>Belo Horizonte</td>\n",
        "      <td>Minas Gerais</td>\n",
        "      <td>96542271</td>\n",
@@ -127,8 +153,8 @@
        "      <td>488</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6801146...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/14593-MLB42305861...</td>\n",
-       "      <td>{'id': 111198324, 'country': {'id': 'BR', 'nam...</td>\n",
-       "      <td>{'id': 96542271, 'power_seller_status': None, ...</td>\n",
+       "      <td>{'city': {'name': 'Belo Horizonte', 'id': 'TUx...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': None, 'rea...</td>\n",
        "      <td>2036-05-29 11:37:22</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>888.03</td>\n",
@@ -146,8 +172,8 @@
        "      <td>98</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802804...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/308501-MLB2035015...</td>\n",
-       "      <td>{'id': 68824781, 'country': {'id': 'BR', 'name...</td>\n",
-       "      <td>{'id': 74620867, 'power_seller_status': 'gold'...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
        "      <td>2035-07-14 16:48:56</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>91.98</td>\n",
@@ -165,8 +191,8 @@
        "      <td>99924</td>\n",
        "      <td>http://produto.mercadolivre.com.br/MLB-6802830...</td>\n",
        "      <td>http://mlb-s1-p.mlstatic.com/20835-MLB20198366...</td>\n",
-       "      <td>{'id': 131386796, 'country': {'id': 'BR', 'nam...</td>\n",
-       "      <td>{'id': 120931770, 'power_seller_status': 'silv...</td>\n",
+       "      <td>{'city': {'name': 'Itaipulândia', 'id': 'TUxCQ...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'silver', ...</td>\n",
        "      <td>2036-02-11 01:44:24</td>\n",
        "      <td>MLB61076</td>\n",
        "      <td>1512.40</td>\n",
@@ -215,19 +241,19 @@
        "\n",
        "                                                 seller_address  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'id': 145589081, 'country': {'id': 'BR', 'nam...   \n",
-       "MLB680108022  {'id': 111198324, 'country': {'id': 'BR', 'nam...   \n",
-       "MLB680114615  {'id': 111198324, 'country': {'id': 'BR', 'nam...   \n",
-       "MLB680280421  {'id': 68824781, 'country': {'id': 'BR', 'name...   \n",
-       "MLB680283060  {'id': 131386796, 'country': {'id': 'BR', 'nam...   \n",
+       "MLB679795497  {'city': {'name': 'Jundiaí', 'id': 'BR-SP-14'}...   \n",
+       "MLB680108022  {'city': {'name': 'Belo Horizonte', 'id': 'TUx...   \n",
+       "MLB680114615  {'city': {'name': 'Belo Horizonte', 'id': 'TUx...   \n",
+       "MLB680280421  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "MLB680283060  {'city': {'name': 'Itaipulândia', 'id': 'TUxCQ...   \n",
        "\n",
        "                                                         seller  \\\n",
        "id                                                                \n",
-       "MLB679795497  {'id': 79901866, 'power_seller_status': 'plati...   \n",
-       "MLB680108022  {'id': 96542271, 'power_seller_status': None, ...   \n",
-       "MLB680114615  {'id': 96542271, 'power_seller_status': None, ...   \n",
-       "MLB680280421  {'id': 74620867, 'power_seller_status': 'gold'...   \n",
-       "MLB680283060  {'id': 120931770, 'power_seller_status': 'silv...   \n",
+       "MLB679795497  {'tags': [], 'power_seller_status': 'platinum'...   \n",
+       "MLB680108022  {'tags': [], 'power_seller_status': None, 'rea...   \n",
+       "MLB680114615  {'tags': [], 'power_seller_status': None, 'rea...   \n",
+       "MLB680280421  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "MLB680283060  {'tags': [], 'power_seller_status': 'silver', ...   \n",
        "\n",
        "                       stop_time category_id   revenue          start_time  \\\n",
        "id                                                                           \n",
@@ -240,7 +266,7 @@
        "              days_ago            city         state  seller_id  \n",
        "id                                                               \n",
        "MLB679795497       496         Jundiaí     São Paulo   79901866  \n",
-       "MLB680108022       276  Belo Horizonte  Minas Gerais   96542271  \n",
+       "MLB680108022       277  Belo Horizonte  Minas Gerais   96542271  \n",
        "MLB680114615       175  Belo Horizonte  Minas Gerais   96542271  \n",
        "MLB680280421       495        Curitiba        Paraná   74620867  \n",
        "MLB680283060       283    Itaipulândia        Paraná  120931770  "
@@ -252,9 +278,278 @@
     }
    ],
    "source": [
-    "import mercadolibre as ml\n",
-    "\n",
     "df = ml.get_df_from_query(query='bateria', category='MLB61076', items_per_query=100, total_results_limit=1000)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Search by seller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for \"N/A\" in N/A sold by 74620867...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/726 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "726 results found.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 726/726 [00:13<00:00, 36.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial request sent to API: https://api.mercadolibre.com/sites/MLB/search?seller_id=74620867&q=&category=&limit=1&offset=0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>price</th>\n",
+       "      <th>sold_quantity</th>\n",
+       "      <th>available_quantity</th>\n",
+       "      <th>permalink</th>\n",
+       "      <th>thumbnail</th>\n",
+       "      <th>seller_address</th>\n",
+       "      <th>seller</th>\n",
+       "      <th>stop_time</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>days_ago</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>seller_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MLB679960578</th>\n",
+       "      <td>Gravador De Áudio Tascam Dr-05 Portátil Digita...</td>\n",
+       "      <td>519.99</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>http://produto.mercadolivre.com.br/MLB-6799605...</td>\n",
+       "      <td>http://mlb-s2-p.mlstatic.com/221601-MLB2034936...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
+       "      <td>2036-05-27 19:35:49</td>\n",
+       "      <td>MLB135858</td>\n",
+       "      <td>3639.93</td>\n",
+       "      <td>2016-05-27 19:35:49</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>74620867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLB680244975</th>\n",
+       "      <td>Gravador Digital Zoom H1 Super Portátil Áudio ...</td>\n",
+       "      <td>668.80</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>http://produto.mercadolivre.com.br/MLB-6802449...</td>\n",
+       "      <td>http://mlb-s2-p.mlstatic.com/523601-MLB2035008...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
+       "      <td>2035-07-14 14:25:08</td>\n",
+       "      <td>MLB135858</td>\n",
+       "      <td>3344.00</td>\n",
+       "      <td>2015-07-14 14:25:08</td>\n",
+       "      <td>495</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>74620867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLB680263312</th>\n",
+       "      <td>Headphone Sony Mdr-7506 Fone Profissional  Gra...</td>\n",
+       "      <td>518.99</td>\n",
+       "      <td>101</td>\n",
+       "      <td>153</td>\n",
+       "      <td>http://produto.mercadolivre.com.br/MLB-6802633...</td>\n",
+       "      <td>http://mlb-s2-p.mlstatic.com/640601-MLB2035009...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
+       "      <td>2035-12-24 15:04:46</td>\n",
+       "      <td>MLB49479</td>\n",
+       "      <td>52417.99</td>\n",
+       "      <td>2015-12-24 15:04:46</td>\n",
+       "      <td>332</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>74620867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLB680279824</th>\n",
+       "      <td>Bateria Do Iphone 4 E 4s Original</td>\n",
+       "      <td>41.99</td>\n",
+       "      <td>25</td>\n",
+       "      <td>75</td>\n",
+       "      <td>http://produto.mercadolivre.com.br/MLB-6802798...</td>\n",
+       "      <td>http://mlb-s2-p.mlstatic.com/156501-MLB2035015...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
+       "      <td>2035-07-14 16:38:51</td>\n",
+       "      <td>MLB61076</td>\n",
+       "      <td>1049.75</td>\n",
+       "      <td>2015-07-14 16:38:51</td>\n",
+       "      <td>495</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>74620867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLB680280421</th>\n",
+       "      <td>Bateria Iphone 5 / 5g Para Iphone Original.</td>\n",
+       "      <td>45.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98</td>\n",
+       "      <td>http://produto.mercadolivre.com.br/MLB-6802804...</td>\n",
+       "      <td>http://mlb-s1-p.mlstatic.com/308501-MLB2035015...</td>\n",
+       "      <td>{'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...</td>\n",
+       "      <td>{'tags': [], 'power_seller_status': 'gold', 'r...</td>\n",
+       "      <td>2035-07-14 16:48:56</td>\n",
+       "      <td>MLB61076</td>\n",
+       "      <td>91.98</td>\n",
+       "      <td>2015-07-14 16:48:56</td>\n",
+       "      <td>495</td>\n",
+       "      <td>Curitiba</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>74620867</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          title   price  \\\n",
+       "id                                                                        \n",
+       "MLB679960578  Gravador De Áudio Tascam Dr-05 Portátil Digita...  519.99   \n",
+       "MLB680244975  Gravador Digital Zoom H1 Super Portátil Áudio ...  668.80   \n",
+       "MLB680263312  Headphone Sony Mdr-7506 Fone Profissional  Gra...  518.99   \n",
+       "MLB680279824                  Bateria Do Iphone 4 E 4s Original   41.99   \n",
+       "MLB680280421        Bateria Iphone 5 / 5g Para Iphone Original.   45.99   \n",
+       "\n",
+       "              sold_quantity  available_quantity  \\\n",
+       "id                                                \n",
+       "MLB679960578              7                  43   \n",
+       "MLB680244975              5                  20   \n",
+       "MLB680263312            101                 153   \n",
+       "MLB680279824             25                  75   \n",
+       "MLB680280421              2                  98   \n",
+       "\n",
+       "                                                      permalink  \\\n",
+       "id                                                                \n",
+       "MLB679960578  http://produto.mercadolivre.com.br/MLB-6799605...   \n",
+       "MLB680244975  http://produto.mercadolivre.com.br/MLB-6802449...   \n",
+       "MLB680263312  http://produto.mercadolivre.com.br/MLB-6802633...   \n",
+       "MLB680279824  http://produto.mercadolivre.com.br/MLB-6802798...   \n",
+       "MLB680280421  http://produto.mercadolivre.com.br/MLB-6802804...   \n",
+       "\n",
+       "                                                      thumbnail  \\\n",
+       "id                                                                \n",
+       "MLB679960578  http://mlb-s2-p.mlstatic.com/221601-MLB2034936...   \n",
+       "MLB680244975  http://mlb-s2-p.mlstatic.com/523601-MLB2035008...   \n",
+       "MLB680263312  http://mlb-s2-p.mlstatic.com/640601-MLB2035009...   \n",
+       "MLB680279824  http://mlb-s2-p.mlstatic.com/156501-MLB2035015...   \n",
+       "MLB680280421  http://mlb-s1-p.mlstatic.com/308501-MLB2035015...   \n",
+       "\n",
+       "                                                 seller_address  \\\n",
+       "id                                                                \n",
+       "MLB679960578  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "MLB680244975  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "MLB680263312  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "MLB680279824  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "MLB680280421  {'city': {'name': 'Curitiba', 'id': 'TUxCQ0NVU...   \n",
+       "\n",
+       "                                                         seller  \\\n",
+       "id                                                                \n",
+       "MLB679960578  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "MLB680244975  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "MLB680263312  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "MLB680279824  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "MLB680280421  {'tags': [], 'power_seller_status': 'gold', 'r...   \n",
+       "\n",
+       "                       stop_time category_id   revenue          start_time  \\\n",
+       "id                                                                           \n",
+       "MLB679960578 2036-05-27 19:35:49   MLB135858   3639.93 2016-05-27 19:35:49   \n",
+       "MLB680244975 2035-07-14 14:25:08   MLB135858   3344.00 2015-07-14 14:25:08   \n",
+       "MLB680263312 2035-12-24 15:04:46    MLB49479  52417.99 2015-12-24 15:04:46   \n",
+       "MLB680279824 2035-07-14 16:38:51    MLB61076   1049.75 2015-07-14 16:38:51   \n",
+       "MLB680280421 2035-07-14 16:48:56    MLB61076     91.98 2015-07-14 16:48:56   \n",
+       "\n",
+       "              days_ago      city   state seller_id  \n",
+       "id                                                  \n",
+       "MLB679960578       177  Curitiba  Paraná  74620867  \n",
+       "MLB680244975       495  Curitiba  Paraná  74620867  \n",
+       "MLB680263312       332  Curitiba  Paraná  74620867  \n",
+       "MLB680279824       495  Curitiba  Paraná  74620867  \n",
+       "MLB680280421       495  Curitiba  Paraná  74620867  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = ml.get_df_from_query(seller_id='74620867', items_per_query=100, total_results_limit=1000)\n",
     "df.head()"
    ]
   },
