sellers by category (market share); function + nb

--- a/categories-example.ipynb
+++ b/categories-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
        " {'id': 'MLB1953', 'name': 'Mais Categorias'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -72,17 +72,17 @@
     {
      "data": {
       "text/plain": [
-       "'Instrumentos Musicais'"
+       "'Esportes e Fitness'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Testing search within array of dicts\n",
-    "search = 'instrumento'\n",
+    "search = 'esportes'\n",
     "match = next((item for item in categories if search in item['name'].lower()), None)\n",
     "\n",
     "category_id = match['id']\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -100,49 +100,52 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': 'MLB7822',\n",
-       "  'name': 'Acessórios Musicais',\n",
-       "  'total_items_in_this_category': 163697},\n",
-       " {'id': 'MLB8055', 'name': 'Acordeons', 'total_items_in_this_category': 3378},\n",
-       " {'id': 'MLB3011',\n",
-       "  'name': 'Amplificadores',\n",
-       "  'total_items_in_this_category': 14745},\n",
-       " {'id': 'MLB4467',\n",
-       "  'name': 'Áudio Profissional',\n",
-       "  'total_items_in_this_category': 122486},\n",
-       " {'id': 'MLB3018', 'name': 'Baixos', 'total_items_in_this_category': 19086},\n",
-       " {'id': 'MLB3004',\n",
-       "  'name': 'Baterias e Percussão',\n",
-       "  'total_items_in_this_category': 64133},\n",
-       " {'id': 'MLB5347',\n",
-       "  'name': 'Cavaquinhos',\n",
-       "  'total_items_in_this_category': 3260},\n",
-       " {'id': 'MLB4474',\n",
-       "  'name': 'Equipamento para DJ',\n",
-       "  'total_items_in_this_category': 18667},\n",
-       " {'id': 'MLB2987', 'name': 'Guitarras', 'total_items_in_this_category': 87432},\n",
-       " {'id': 'MLB4479',\n",
-       "  'name': 'Metrônomos e Afinadores',\n",
-       "  'total_items_in_this_category': 3756},\n",
-       " {'id': 'MLB3007',\n",
-       "  'name': 'Pedais e Efeitos de Som',\n",
-       "  'total_items_in_this_category': 30855},\n",
-       " {'id': 'MLB3022',\n",
-       "  'name': 'Pianos, Órgãos e Teclados',\n",
-       "  'total_items_in_this_category': 29042},\n",
-       " {'id': 'MLB3771', 'name': 'Saxofones', 'total_items_in_this_category': 15883},\n",
-       " {'id': 'MLB5356', 'name': 'Violinos', 'total_items_in_this_category': 10388},\n",
-       " {'id': 'MLB3015', 'name': 'Violões', 'total_items_in_this_category': 45426},\n",
-       " {'id': 'MLB3014', 'name': 'Outros', 'total_items_in_this_category': 8983},\n",
-       " {'id': 'MLB4464',\n",
-       "  'name': 'Outros Instrumentos de Corda',\n",
-       "  'total_items_in_this_category': 6291},\n",
-       " {'id': 'MLB3005',\n",
-       "  'name': 'Outros Instrumentos de Sopro',\n",
-       "  'total_items_in_this_category': 17602}]"
+       "[{'id': 'MLB2480',\n",
+       "  'name': 'Artes Marciais e Boxe',\n",
+       "  'total_items_in_this_category': 34026},\n",
+       " {'id': 'MLB223366', 'name': 'Badminton', 'total_items_in_this_category': 474},\n",
+       " {'id': 'MLB10539', 'name': 'Baseball', 'total_items_in_this_category': 1163},\n",
+       " {'id': 'MLB1309', 'name': 'Basquete', 'total_items_in_this_category': 4709},\n",
+       " {'id': 'MLB1362', 'name': 'Camping', 'total_items_in_this_category': 131452},\n",
+       " {'id': 'MLB1292', 'name': 'Ciclismo', 'total_items_in_this_category': 272195},\n",
+       " {'id': 'MLB223498', 'name': 'Equitação', 'total_items_in_this_category': 312},\n",
+       " {'id': 'MLB1277',\n",
+       "  'name': 'Esportes Aquáticos',\n",
+       "  'total_items_in_this_category': 51271},\n",
+       " {'id': 'MLB1355',\n",
+       "  'name': 'Esportes de Aventura e Ação',\n",
+       "  'total_items_in_this_category': 86373},\n",
+       " {'id': 'MLB1338',\n",
+       "  'name': 'Fitness e Musculação',\n",
+       "  'total_items_in_this_category': 119864},\n",
+       " {'id': 'MLB1286', 'name': 'Futebol', 'total_items_in_this_category': 185780},\n",
+       " {'id': 'MLB1302',\n",
+       "  'name': 'Futebol Americano',\n",
+       "  'total_items_in_this_category': 3328},\n",
+       " {'id': 'MLB9900', 'name': 'Golfe', 'total_items_in_this_category': 1575},\n",
+       " {'id': 'MLB251434', 'name': 'Hockey', 'total_items_in_this_category': 116},\n",
+       " {'id': 'MLB1293',\n",
+       "  'name': 'Patins e Skates',\n",
+       "  'total_items_in_this_category': 35898},\n",
+       " {'id': 'MLB6796', 'name': 'Pesca', 'total_items_in_this_category': 127046},\n",
+       " {'id': 'MLB80357',\n",
+       "  'name': 'Protetores Esportivos',\n",
+       "  'total_items_in_this_category': 17483},\n",
+       " {'id': 'MLB122102',\n",
+       "  'name': 'Suplementos',\n",
+       "  'total_items_in_this_category': 237477},\n",
+       " {'id': 'MLB3900', 'name': 'Tênis', 'total_items_in_this_category': 295777},\n",
+       " {'id': 'MLB10536',\n",
+       "  'name': 'Tênis de Mesa',\n",
+       "  'total_items_in_this_category': 3330},\n",
+       " {'id': 'MLB1322',\n",
+       "  'name': 'Tênis e Squash',\n",
+       "  'total_items_in_this_category': 14053},\n",
+       " {'id': 'MLB1333', 'name': 'Vôlei', 'total_items_in_this_category': 2994},\n",
+       " {'id': 'MLB1358', 'name': 'Outros', 'total_items_in_this_category': 11447}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -162,24 +165,57 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': 'MLB29326', 'name': 'Condor', 'total_items_in_this_category': 94},\n",
-       " {'id': 'MLB29342', 'name': 'Crafter', 'total_items_in_this_category': 227},\n",
-       " {'id': 'MLB6814', 'name': 'Eagle', 'total_items_in_this_category': 343},\n",
-       " {'id': 'MLB29279', 'name': 'Giannini', 'total_items_in_this_category': 4698},\n",
-       " {'id': 'MLB29327', 'name': 'Phoenix', 'total_items_in_this_category': 66},\n",
-       " {'id': 'MLB29317', 'name': 'Tagima', 'total_items_in_this_category': 991},\n",
-       " {'id': 'MLB29278', 'name': 'Takamine', 'total_items_in_this_category': 696},\n",
-       " {'id': 'MLB29324', 'name': 'Yamaha', 'total_items_in_this_category': 578},\n",
-       " {'id': 'MLB29334', 'name': 'Outros', 'total_items_in_this_category': 3125}]"
+       "[{'id': 'MLB6790',\n",
+       "  'name': 'Acessórios ',\n",
+       "  'total_items_in_this_category': 93105},\n",
+       " {'id': 'MLB180269',\n",
+       "  'name': 'Bicicletas',\n",
+       "  'total_items_in_this_category': 28132},\n",
+       " {'id': 'MLB67974', 'name': 'DVDs', 'total_items_in_this_category': 772},\n",
+       " {'id': 'MLB106739', 'name': 'Kit Motor', 'total_items_in_this_category': 529},\n",
+       " {'id': 'MLB1934', 'name': 'Peças ', 'total_items_in_this_category': 113004},\n",
+       " {'id': 'MLB1935', 'name': 'Roupas', 'total_items_in_this_category': 33114},\n",
+       " {'id': 'MLB1936', 'name': 'Outros', 'total_items_in_this_category': 3539}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ml.get_children_categories('MLB3017')"
+    "ml.get_children_categories('MLB1292')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'MLB54182',\n",
+       "  'name': 'Bases e Suportes',\n",
+       "  'total_items_in_this_category': 3440},\n",
+       " {'id': 'MLB63274',\n",
+       "  'name': 'Coolers Portáteis',\n",
+       "  'total_items_in_this_category': 6111},\n",
+       " {'id': 'MLB54183',\n",
+       "  'name': 'Fans Internos',\n",
+       "  'total_items_in_this_category': 31497},\n",
+       " {'id': 'MLB54184', 'name': 'Outros', 'total_items_in_this_category': 4676}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml.get_children_categories('MLB10345')"
    ]
   },
   {
